[package]
name = "ddnspod"
version = "0.1.0"
edition = "2021"

[dependencies]
dnspod-lib = "0.1"
pnet = "0.34"
ipnetwork = "0.20"
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive", "string", "env"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
